# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/materials/: brick.mat  checker.mat  suzanne.mat
assets/scenes/: scene.sc
assets/shaders/: fragment.glsl  vertex.glsl
engine/: CMakeLists.txt
engine/source/: Application.cpp  Application.h  Common.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  eng.h
engine/source/audio/: Audio.cpp  Audio.h  AudioManager.cpp  AudioManager.h
engine/source/font/: Font.cpp  Font.h  FontManager.cpp  FontManager.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/io/: FileSystem.cpp  FileSystem.h
engine/source/physics/: Collider.cpp  Collider.h  CollisionObject.cpp  CollisionObject.h  KinematicCharacterController.cpp  KinematicCharacterController.h  RigidBody.cpp  RigidBody.h  physicsManager.cpp  physicsManager.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
engine/source/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/source/scene/components/: AnimationComponent.cpp  AnimationComponent.h  AudioComponent.cpp  AudioComponent.h  AudioListenerComponent.cpp  AudioListenerComponent.h  CameraComponent.cpp  CameraComponent.h  CamraComponent.cpp  CamraComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h  SpriteComponent.cpp  SpriteComponent.h
engine/source/scene/components/ui/: ButtonComponent.cpp  ButtonComponent.h  CanvasComponent.cpp  CanvasComponent.h  RectTransformComponent.cpp  RectTransformComponent.h  TextComponent.cpp  TextComponent.h  UIElementComponent.cpp  UIElementComponent.h  UIInputSystem.cpp  UIInputSystem.h
source/: Bullet.cpp  Bullet.h  Game.cpp  Game.h  JumpPlatform.cpp  JumpPlatform.h  Player.cpp  Player.h  TestObject.cpp  TestObject.h
source/GUI/: imGUI.cpp  imGUI.h
